--- a/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
+++ b/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
@@ -53,11 +53,11 @@
                   <Group type="102" attributes="0">
                       <Component id="jLabel6" min="-2" pref="130" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jTextField1" min="-2" pref="150" max="-2" attributes="0"/>
+                      <Component id="txtNom" min="-2" pref="150" max="-2" attributes="0"/>
                       <EmptySpace min="98" pref="98" max="-2" attributes="0"/>
                       <Component id="jLabel9" min="-2" pref="130" max="-2" attributes="0"/>
-                      <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
-                      <Component id="spLargo" min="-2" pref="150" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="txtLargo" min="-2" pref="150" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jLabel5" min="-2" pref="130" max="-2" attributes="0"/>
@@ -73,7 +73,7 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel7" min="-2" pref="130" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="cboCarrosCorredor" min="-2" pref="150" max="-2" attributes="0"/>
+                              <Component id="cboTipo" min="-2" pref="150" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
@@ -118,13 +118,15 @@
               <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtNom" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="spLargo" min="-2" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
-                      <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtLargo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
               <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
@@ -144,13 +146,13 @@
                       </Group>
                       <Component id="btnReiniciar" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="cboCarrosCorredor" min="-2" max="-2" attributes="0"/>
+                  <Component id="cboTipo" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnColor" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
               <Component id="btnGuardar" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="22" max="32767" attributes="0"/>
+              <EmptySpace pref="19" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -234,7 +236,7 @@
         <Property name="text" type="java.lang.String" value="Numero identificador"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="txtNom">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
@@ -243,14 +245,14 @@
     </Component>
     <Component class="javax.swing.JSpinner" name="spId">
     </Component>
-    <Component class="javax.swing.JComboBox" name="cboCarrosCorredor">
+    <Component class="javax.swing.JComboBox" name="cboTipo">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+            <StringItem index="0" value="- Seleccionar -"/>
+            <StringItem index="1" value="McQueen"/>
+            <StringItem index="2" value="Convertible"/>
+            <StringItem index="3" value="Nascar"/>
           </StringArray>
         </Property>
       </Properties>
@@ -260,18 +262,24 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Carros"/>
+        <Property name="text" type="java.lang.String" value="Tipo de carro"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnColor">
       <Properties>
         <Property name="text" type="java.lang.String" value="Color"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnColorActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnGuardar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGuardarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
       <Properties>
@@ -285,17 +293,20 @@
         <Property name="text" type="java.lang.String" value="Largo de la pista"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JSpinner" name="spLargo">
-    </Component>
     <Component class="javax.swing.JButton" name="btnPista">
       <Properties>
         <Property name="text" type="java.lang.String" value="Usar pista"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPistaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnReiniciar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reiniciar"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="txtLargo">
     </Component>
   </SubComponents>
 </Form>
