--- a/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
+++ b/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
@@ -163,6 +163,7 @@
         <Property name="text" type="java.lang.String" value="Comenzar"/>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnComenzarMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnComenzarActionPerformed"/>
       </Events>
     </Component>
@@ -212,9 +213,6 @@
               </Table>
             </Property>
           </Properties>
-          <Events>
-            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tablaMouseClicked"/>
-          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -317,6 +315,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Reiniciar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReiniciarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtLargo">
     </Component>
