Ya casi esta todo pero no cambia el color la barrita

--- a/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
+++ b/src/lab8p2_pamelaramirez_12141141/VentanaPrincipal.form
@@ -220,6 +220,14 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JProgressBar" name="pbCarrera">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="cc" red="ff" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cboCarros">
       <Properties>
